--- a/data/default.css
+++ b/data/default.css
@@ -2,20 +2,18 @@ h1 { font-size: 1.6em; font-weight: bold; }
 h2 { font-size: 1.4em; font-weight: bold; }
 h3 { font-size: 1.2em; font-weight: bold; }
 
-body { margin: 0em; padding: 0em; }
-div[class="body"] {
-	margin-left: 0.8em;
-	margin-right: 0.8em;
-	margin-bottom: 1.6em;
+body {
+	padding-left: 8px;
+	padding-right: 12px;
 }
 
 p, div { margin: 0em; }
 p + p, p + div, div + p, div + div { margin-top: 0.8em; }
 
-dl { margin: 0em; }
-ol { margin: 0em; }
-ul { margin: 0em; }
-ul li { padding-left: 0.4em; }
-dd + dt { margin-top: 1.6em; }
+dl { margin: 0px; }
+ol { margin: 0px; }
+ul { margin: 0px; }
+ol li { padding-left: 12px; }
+ul li { padding-left: 12px; }
 
 li[class="menu-folder"] + li[class="menu-file"] { margin-top: 0.8em; }
