data/ui/yelp.glade - patch from Gabriel Burt to fix #318485
2005-10-15  Don Scorgie <dscorgie@cvs.gnome.org>
        * data/ui/yelp.glade
        - patch from Gabriel Burt to fix #318485

--- a/data/ui/yelp.glade
+++ b/data/ui/yelp.glade
@@ -857,6 +857,7 @@
 	      <child>
 		<widget class="GtkButton" id="open_button">
 		  <property name="visible">True</property>
+		  <property name="sensitive">False</property>
 		  <property name="can_default">True</property>
 		  <property name="can_focus">True</property>
 		  <property name="label">gtk-open</property>
@@ -869,6 +870,7 @@
 	      <child>
 		<widget class="GtkButton" id="rename_button">
 		  <property name="visible">True</property>
+		  <property name="sensitive">False</property>
 		  <property name="can_default">True</property>
 		  <property name="can_focus">True</property>
 		  <property name="label" translatable="yes">Re_name</property>
@@ -881,6 +883,7 @@
 	      <child>
 		<widget class="GtkButton" id="remove_button">
 		  <property name="visible">True</property>
+		  <property name="sensitive">False</property>
 		  <property name="can_default">True</property>
 		  <property name="can_focus">True</property>
 		  <property name="label">gtk-remove</property>
